examples/datalog/22_set_operations/26_set_cardinality.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_cardinality
Knowledge graph 'test_cardinality' created.
Switched to knowledge graph: test_cardinality
> .kg use test_cardinality
Switched to knowledge graph: test_cardinality
> +set_a[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'set_a'.
> +set_b[(1,), (2,), (3,), (4,), (5,)].
Inserted 5 fact(s) into 'set_b'.
> count_a(<COUNT:X>) :- set_a(X).
Script error: Parse error: Unknown aggregate function: 
